Fixing About Us vertical spacing for mobile

--- a/src/components/AboutUs.scss
+++ b/src/components/AboutUs.scss
@@ -2,7 +2,7 @@
 .about-us {
   img {
     width: 75vw;
-    margin: 11vh 0 8.14vw;
+    margin: 15vh 0 8.14vw;
     border-radius: 10px;
   }
 
@@ -11,7 +11,7 @@
   }
 
   .bg-container {
-    padding-bottom: 15vh;
+    padding-bottom: 18vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
